Fix center content spacing

--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,9 @@ div#footer {
 	width: 750px;
 	margin: 0 auto;
 }
+.center.content {
+	padding: 20px 0;
+}
 article section p {
 	text-align: justify;
 	margin-bottom: 24px;
@@ -105,12 +108,11 @@ article section p {
 #header .menu li a:hover{
 	color: #F00;
 }
-
 /* ==========================================================================
  About me
  ========================================================================== */
 .mirko {
-	padding: 30px 0;
+	padding: 10px 0 30px 0;
 	background: #F7F5F2;
 }
 .mirko section.about {
